--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Ken Kok, New Zealand 
+name: Ken Kok, New Zealand 2024 YOTD
 
 # Short bio or description (displayed in the header)
 description: Enjoy life
